# TissueTransport

./: .gitignore  LICENSE  README.md
simulation/: benchmark.py  main.py  test_vessel.py
simulation/domain/: __init__.py  tissue.py
simulation/domain/vessel/: __init__.py  constants.py  coupling.py  flow.py  geometry.py  network.py  transport.py
simulation/gpu_solver/: Cargo.toml
simulation/gpu_solver/examples/: benchmark.rs  gpu_detect.rs
simulation/gpu_solver/src/: flux.rs  lib.rs  python.rs  timestep.rs  types.rs
simulation/gpu_solver/src/gpu/: mod.rs  solver.rs
simulation/gpu_solver/src/gpu/shaders/: gas_exchange_step.wgsl  reaction_diffusion_step.wgsl
simulation/gpu_solver/test_data/: generate_reference.py  generatre_reference.py  reference_case.json
simulation/gpu_solver/tests/: test_consumption.rs  test_flux.rs  test_python_equivalences.rs  test_timestep.rs  test_vessel_reset.rs  test_wgpu_reference.rs
simulation/image_processing/: __init__.py  preprocessing.py
simulation/solver/: __init__.py  diffusion.py  flux.py  time_step.py
simulation/solver_reference/: time_step.py
simulation/species/: __init__.py  base.py  carbon_dioxide.py  oxygen.py
