[package]
name = "gpu_solver"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]

# GPU / compute
wgpu = "29.0.3"
pollster = "0.4"

# Buffer serialization
bytemuck = { version = "1.23", features = ["derive"] }

# Array handling (temporary, CPU validation)
ndarray = "0.17.2"

# Error handling
thiserror = "2"

# Optional logging/debugging
log = "0.4"
env_logger = "0.11"

# Python bindings (later)
pyo3 = { version = "0.28.3", features = ["extension-module"], optional = true }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
python = ["dep:pyo3"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1